<resources>
    <string name="app_name">Shopping List</string>
    <string name="shopping_list_title">My Shopping List</string>
    <string name="choose_type">[Choose Type]</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="item_name">Item Name</string>
    <string name="bought">Bought</string>
    <string name="save">Save</string>
    <string name="_00">$%s</string>
    <string name="txt_place_added">Place added</string>
    <string name="txt_add_cancel">Place adding cancelled</string>
    <string name="txt_place_edited">Place edited!</string>
    <string name="action_hide">Hide</string>
    <string name="total_cost">Total Cost: $%s</string>
    <string name="warning">Are you sure you want to delete all items from your list?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
</resources>
